--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -37,3 +37,21 @@ body {
   margin: 0 auto;
 }
 
+.info-email {
+  font-weight: 600;
+  color: $title;
+  font-size: 14px;
+  margin-bottom: 22px;
+  padding-left: 30px;
+  display: inline-block;
+  position: relative;
+  &::before {
+    content: '';
+    position: absolute;
+    left: 0;
+    background-image: url(../images/envelope.svg);
+    width: 16px;
+    height: 12px;
+    top: 8px;
+  }
+}
