--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -76,24 +76,6 @@
     width: 476px;
     margin-bottom: 16px;
   }
-  &__info-email {
-    font-weight: 600;
-    color: $title;
-    font-size: 14px;
-    margin-bottom: 22px;
-    padding-left: 30px;
-    display: inline-block;
-    position: relative;
-    &::before {
-      content: '';
-      position: absolute;
-      left: 0;
-      background-image: url(../images/envelope.svg);
-      width: 16px;
-      height: 12px;
-      top: 8px;
-    }
-  }
   &__form {
     display: flex;
   }
@@ -185,6 +167,8 @@
 .breadcrumbs {
   background-color: rgba(#DFDFDF, .5);
   padding: 13px 0 14px;
+  position: relative;
+  z-index: 4;
   &__list {
     display: flex;
   }
@@ -544,6 +528,15 @@
     height: 100%;
     max-height: 1150px;
   }
+  &.gallery--page {
+    .gallery__item img {
+      max-height: 1165px;
+    }
+    .gallery__item:nth-child(8) {
+      grid-column: span 2;
+      grid-row: span 2;
+    }
+  }
 }
 
 .blog-box {
@@ -721,6 +714,516 @@
     margin: 0 auto;
   }
 }
+
+.map {
+  margin-top: -53px;
+}
+
+.contact {
+  padding-bottom: 100px;
+  &__title {
+    color: $title;
+    @extend %title-font;
+    font-size: 36px;
+    line-height: 60px;
+    padding-bottom: 35px;
+    margin-bottom: 40px;
+    position: relative;
+    &::after {
+      content: '';
+      position: absolute;
+      left: 0;
+      bottom: 0;
+      height: 2px;
+      width: 200px;
+      background-color: #6D7278;
+    }
+  }
+  &__box,
+  &__form {
+    padding-left: 284px;
+  }
+  .contact__social {
+    padding-left: 284px;
+    display: flex;
+  }
+  &__social-item + .contact__social-item {
+    padding-left: 40px;
+    margin-bottom: 20px;
+  }
+  &__text {
+    margin-bottom: 10px;
+  }
+  &__phone {
+    color: $default;
+  }
+  &__city {
+    margin-bottom: 16px;
+  }
+  &__form {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
+  &__form-input {
+    border: 1px solid #DFDFDF;
+    border-radius: 20px;
+    padding: 6px 17px;
+    width: 48%;
+    margin-bottom: 13px;
+    &::placeholder {
+      color: #A1A1A1;
+      font-size: 16px;
+      line-height: 28px;
+      font-family: 'Open Sans', sans-serif;
+      font-weight: 400;
+    }
+  }
+  &__form-area {
+    width: 100%;
+    border: 1px solid #DFDFDF;
+    border-radius: 24px;
+    padding: 14px 17px;
+    min-height: 125px;
+    resize: none;
+    margin-bottom: 20px;
+    &::placeholder {
+      color: #A1A1A1;
+      font-size: 16px;
+      line-height: 28px;
+      font-family: 'Open Sans', sans-serif;
+      font-weight: 400;
+    }
+  }
+  &__form-btn {
+    color: #fff;
+    padding: 6px 60px;
+    border: none;
+    color: #fffff0;
+    font-weight: 600;
+    background-color: $title;
+    border-radius: 21px;
+    cursor: pointer;
+  }
+}
+
+.contact-slider {
+  padding-bottom: 100px;
+  display: flex;
+  justify-content: space-between;
+  &__link {
+    position: relative;
+    &:hover {
+      .contact-slider__title {
+        opacity: 1;
+      }
+    }
+  }
+  &__img {
+    width: 170px;
+    height: 170px;
+    object-fit: cover;
+  }
+  &__title {
+    position: absolute;
+    transition: all .5s;
+    left: 0;
+    right: 0; 
+    top: 0;
+    bottom: 0;
+    display: flex;
+    justify-content: space-between;
+    text-align: center;
+    align-items: center;
+    background-color: rgba(#fff, .6);
+    color: $title;
+    @extend %title-font;
+    line-height: 22px;
+    padding: 0 5px;
+    opacity: 0;
+  }
+}
+
+.blog {
+  padding: 60px 0 100px;
+  &__inner {
+    display: flex;
+    justify-content: space-between;
+  }
+  &__category {
+    margin-bottom: 36px;
+  }
+  &__category-title,
+  &__tags-title {
+    margin-bottom: 15px;
+    color: $title;
+    @extend %title-font;
+    line-height: 23px;
+  }
+  &__category-item {
+    margin-bottom: 12px;
+  }
+  &__category-link {
+    color: $default;
+  }
+  &__tags {
+    margin-bottom: 50px;
+  }
+  &__tags-link {
+    font-weight: 600;
+    font-size: 14px;
+    color: #8F8D8D;
+    padding: 0 16px;
+    margin-bottom: 10px;
+    margin-right: 6px;
+    display: inline-block;
+    border-radius: 14px;
+    border: 1px solid rgba(#454647, .5);
+  }
+  &__social {
+    display: flex;
+  }
+  &__social-item + .blog__social-item {
+    margin-left: 20px;
+  }
+  &__items {
+    max-width: 730px;
+  }
+  &__item {
+    margin-bottom: 80px;
+  }
+  &__item-img {
+    max-width: 730px;
+  }
+  &__item-info {
+    padding: 25px 0 10px;
+    font-weight: 600;
+    font-size: 14px;
+    color: #707070;
+    a {
+      color: inherit;
+    }
+  }
+  &__item-title {
+    font-size: 24px;
+    line-height: 38px;
+    margin-bottom: 6px;
+    color: $title;
+    @extend %title-font;
+  }
+  &__blockquote {
+    margin-bottom: 50px;
+    background: rgba(223, 223, 223, 0.5);
+    padding: 54px 64px;
+    font-style: italic;
+    font-weight: 300;
+    font-size: 24px;
+    line-height: 38px;
+    color: #363838;
+    text-align: center;
+  }
+  &__blockquote-author {
+    font-size: 16px;
+    line-height: 22px;
+    color: $title;
+    @extend %title-font;
+    font-style: normal;
+    margin-top: 23px;
+    padding-top: 23px;
+    position: relative;
+    &::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      height: 1px;
+      width: 200px;
+      background: #6D7278;
+      margin: 0 auto;
+      border-radius: 0.5px;
+    }
+  }
+  &__item-popup {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+  }
+}
+
+.aside {
+  width: 350px;
+  margin-left: 30px;
+  &__search {
+    position: relative;
+    margin-bottom: 40px;
+  }
+  &__search-input {
+    border-radius: 20px;
+    border: 1px solid rgba(#383636, .7);
+    padding: 6px 38px 6px 18px;
+    width: 100%;
+    &::placeholder {
+      font-size: 16px;
+      line-height: 27px;
+      font-weight: 400;
+      font-family: 'Open Sans', sans-serif;
+      font-size: 14px;
+      color: #A1A1A1;
+    }
+  }
+  &__search-btn {
+    border: none;
+    background-color: transparent;
+    position: absolute;
+    top: 11px;
+    right: 10px;
+    cursor: pointer;
+  }
+}
+
+.recent-posts {
+  margin-bottom: 40px;
+  &__title {
+    margin-bottom: 24px;
+    color: $title;
+    @extend %title-font;
+    line-height: 23px;
+  }
+  &__item {
+    margin-bottom: 11px;
+  }
+  &__item-title {
+    display: block;
+    color: inherit;
+  }
+  &__date,
+  &__author {
+    font-size: 14px;
+    line-height: 28px;
+    color: #A1A1A1;
+  }
+}
+
+.article-popup {
+  &__box {
+    position: relative;
+  }
+}
+
+.pagination {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  &__list {
+    display: flex;
+  }
+  &__list-item {
+    margin: 0 6px;
+  }
+  &__arrow {
+    margin: 0 6px;
+  }
+  &__arrow--disabled {
+    opacity: 0;
+    cursor: default;
+  }
+  &__list-num {
+    font-size: 14px;
+    font-weight: 600;
+    color: #707070;
+  }
+  &__list-num--active {
+    color: $title;
+  }
+}
+
+.blog-one {
+  &__tags {
+    margin-bottom: 30px;
+  }
+  &__tags-title {
+    color: $title;
+    @extend %title-font;
+    margin-bottom: 15px;
+    font-size: 20px;
+    line-height: 31px;
+  }
+  &__tags-link {
+    margin-bottom: 10px;
+    margin-right: 23px;
+    padding: 0 16px;
+    font-weight: 600;
+    color: #8F8D8D;
+    font-size: 14px;
+    line-height: 28px;
+    border-radius: 14px;
+    border: 1px solid rgba(#454647, .5);
+    display: inline-block;
+  }
+  &__links {
+    padding: 40px 0 32px;
+    border-top: 1px solid #DFDFDF;
+    border-bottom: 1px solid #DFDFDF;
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 35px;
+  }
+  &__link {
+    max-width: 243px;
+    position: relative;
+    font-weight: 600;
+    font-size: 14px;
+    color: #707070;
+    line-height: 28px;
+  }
+  &__link-prev {
+    padding-left: 44px;
+    &::before {
+      position: absolute;
+      content: '';
+      left: 0;
+      top: 50%;
+      transform: translateY(-50%);
+      background-image: url(../images/arrow-left.svg);
+      width: 12px;
+      height: 23px;
+    }
+  }
+  &__link-next {
+    padding-right: 44px;
+    text-align: right;
+    &::after {
+      position: absolute;
+      content: '';
+      right: 0;
+      top: 50%;
+      transform: translateY(-50%);
+      background-image: url(../images/arrow-right.svg);
+      width: 12px;
+      height: 23px;
+    }
+  }
+  &__comments-title {
+    color: $title;
+    @extend %title-font;
+    margin-bottom: 15px;
+    line-height: 31px;
+    font-size: 20px;
+  }
+  &__comments-item {
+    display: flex;
+    justify-content: space-between;
+    align-items: start;
+    margin-bottom: 40px;
+  }
+  &__comments-avatar {
+    width: 64px;
+    height: 64px;
+    object-fit: cover;
+    border-radius: 50%;
+    margin-right: 13px;
+  }
+  &__reply {
+    background-color: transparent;
+    border: none;
+    margin-left: 5px;
+    padding: 0;
+    color: #707070;
+    font-size: 14px;
+    font-weight: 600;
+  }
+  &__comments-name {
+    color: $title;
+    @extend %title-font;
+    font-size: 16px;
+    line-height: 23px;
+  }
+  &__comments-date {
+    margin-bottom: 10px;
+    color: #A1A1A1;
+    font-size: 14px;
+  }
+  &__form {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+  &__form-title {
+    color: $title;
+    @extend %title-font;
+    margin-bottom: 25px;
+    line-height: 23px;
+    font-size: 20px;
+  }
+  &__form-textarea {
+    width: 100%;
+    border: 1px solid #DFDFDF;
+    border-radius: 24px;
+    padding: 14px 17px;
+    min-height: 125px;
+    resize: none;
+    margin-bottom: 12px;
+    &::placeholder {
+      color: #A1A1A1;
+      font-size: 16px;
+      line-height: 28px;
+      font-family: 'Open Sans', sans-serif;
+      font-weight: 400;
+    }
+  }
+  &__form-input {
+    border: 1px solid #DFDFDF;
+    border-radius: 20px;
+    padding: 6px 17px;
+    width: 48%;
+    margin-bottom: 20px;
+    &::placeholder {
+      color: #A1A1A1;
+      font-size: 16px;
+      line-height: 28px;
+      font-family: 'Open Sans', sans-serif;
+      font-weight: 400;
+    }
+  }
+  &__form-btn {
+    color: #fff;
+    padding: 6px 60px;
+    border: none;
+    color: #fffff0;
+    font-weight: 600;
+    background-color: $title;
+    border-radius: 21px;
+    cursor: pointer;
+  }
+  &__form-label {
+    width: 100%;
+    margin-bottom: 20px;
+    font-size: 14px;
+    color: #A1A1A1;
+  }
+}
+
+.blog-one__item {
+  p {
+    margin-bottom: 40px;
+  }
+  blockquote {
+    font-size: 24px;
+    font-weight: 300;
+    font-style: italic;
+    color: $title;
+    padding: 0 40px;
+    margin-bottom: 30px;
+  }
+  .blog__blockquote-author::before {
+    margin: 0;
+  }
+}
+
+
+
 
 
 
