--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -16,6 +16,9 @@
     padding: 0;
     cursor: pointer;
   }
+  &__btn-menu {
+    display: none;
+  }
 }
 
 .menu {
@@ -40,7 +43,7 @@
       position: absolute;
       left: 0;
       bottom: 0;
-      width: 53px;
+      width: 100%;
       height: 2px;
       background-color: rgba(#363838, .7);
       border-radius: 1px;
@@ -73,7 +76,7 @@
     line-height: 23px;
   }
   &__info-text {
-    width: 476px;
+    max-width: 476px;
     margin-bottom: 16px;
   }
   &__form {
@@ -171,11 +174,15 @@
   z-index: 4;
   &__list {
     display: flex;
+    overflow-x: auto;
+  }
+  &__item {
+    position: relative;
+    padding-right: 8px;
   }
   &__item::after {
     content: '/';
-    margin-left: -3px;
-    margin-right: 3px;
+    position: absolute;
   }
   &__item:last-child::after {
     display: none;
@@ -304,6 +311,7 @@
   padding: 45px 0 35px;
   &__title {
     color: $title;
+    @extend %title-font;
     font-size: 36px;
     line-height: 51px;
     padding-bottom: 25px;
@@ -341,7 +349,6 @@
     }
   }
   &__images {
-    max-width: 350px;
     min-height: 350px;
     object-fit: cover;
   }
@@ -392,7 +399,6 @@
   background-image: url(../images/decor-bg.jpg);
   background-repeat: no-repeat;
   background-size: cover;
-  min-height: 600px;
   &__title {
     font-size: 60px;
     line-height: 80px;
@@ -717,6 +723,9 @@
 
 .map {
   margin-top: -53px;
+  iframe {
+    height: 578px;
+  }
 }
 
 .contact {
@@ -1083,6 +1092,7 @@
     &::before {
       position: absolute;
       content: '';
+      cursor: pointer;
       left: 0;
       top: 50%;
       transform: translateY(-50%);
@@ -1097,6 +1107,7 @@
     &::after {
       position: absolute;
       content: '';
+      cursor: pointer;
       right: 0;
       top: 50%;
       transform: translateY(-50%);
